// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed state 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #2C3A73;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c9 a {
  color: #FFFFFF;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 24px;
  margin-top: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Reset User Authentication?
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
          kind="danger"
        >
          some server error
        </div>
        <div
          class="c10"
        >
          You are about to reset authentication for user
          <span
            class="c11"
          >
             smith 
          </span>
          . This will generate a temporary URL which can be used to set up new authentication.
        </div>
      </div>
      <div
        class="c12"
      >
        <button
          class="c13"
          kind="primary"
        >
          Generate reset url
        </button>
        <button
          class="c14"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`processing state 1`] = `
.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #2C3A73;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 24px;
  margin-top: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Reset User Authentication?
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
        >
          You are about to reset authentication for user
          <span
            class="c10"
          >
             smith 
          </span>
          . This will generate a temporary URL which can be used to set up new authentication.
        </div>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12"
          disabled=""
          kind="primary"
        >
          Generate reset url
        </button>
        <button
          class="c13"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`success state 1`] = `
.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #2C3A73;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  border-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 24px;
  margin-top: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Share Link
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
        >
          User
          <span
            class="c10"
          >
             Lester 
          </span>
          has been reset. Share this URL with the user to set up a new password, link is valid for 
          30 minutes
          .
        </div>
        <div
          class="c11 c12"
        >
          <div
            class="c13 c14"
            style="word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
          >
            <div>
              http://localhost/web/reset/0c536179038b386728dfee6602ca297f
            </div>
          </div>
          <button
            class="c15"
            kind="primary"
            style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
          >
            Copy
          </button>
        </div>
      </div>
      <div
        class="c16"
      >
        <button
          class="c17"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
